--- a/GymSystem.csproj
+++ b/GymSystem.csproj
@@ -1,40 +1,58 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="wwwroot\lib\**" />
-    <Content Remove="wwwroot\lib\**" />
-    <EmbeddedResource Remove="wwwroot\lib\**" />
-    <None Remove="wwwroot\lib\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="wwwroot\lib\**" />
+		<Content Remove="wwwroot\lib\**" />
+		<EmbeddedResource Remove="wwwroot\lib\**" />
+		<None Remove="wwwroot\lib\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Remove="Pages\Error.cshtml.cs" />
-    <Compile Remove="Pages\Privacy.cshtml.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Pages\Error.cshtml.cs" />
+		<Compile Remove="Pages\Privacy.cshtml.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Remove="Pages\Error.cshtml" />
-    <Content Remove="Pages\Privacy.cshtml" />
-    <Content Remove="wwwroot\css\HomePageLayoutCSS\AboutSection.module.css" />
-    <Content Remove="wwwroot\css\HomePageLayoutCSS\ContactUs.module.css" />
-    <Content Remove="wwwroot\css\HomePageLayoutCSS\JoinButton.module.css" />
-    <Content Remove="wwwroot\css\HomePageLayoutCSS\NavBar.module.css" />
-    <Content Remove="wwwroot\css\HomePageLayoutCSS\OptionSection.module.css" />
-    <Content Remove="wwwroot\css\HomePageLayoutCSS\StyleSheet.css" />
-    <Content Remove="wwwroot\css\HomePageLayoutCSS\TopImage.module.css" />
-    <Content Remove="wwwroot\favicon.ico" />
-    <Content Remove="wwwroot\js\site.js" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Remove="Pages\Error.cshtml" />
+		<Content Remove="Pages\Privacy.cshtml" />
+		<Content Remove="wwwroot\css\HomePageLayoutCSS\AboutSection.module.css" />
+		<Content Remove="wwwroot\css\HomePageLayoutCSS\ContactUs.module.css" />
+		<Content Remove="wwwroot\css\HomePageLayoutCSS\JoinButton.module.css" />
+		<Content Remove="wwwroot\css\HomePageLayoutCSS\NavBar.module.css" />
+		<Content Remove="wwwroot\css\HomePageLayoutCSS\OptionSection.module.css" />
+		<Content Remove="wwwroot\css\HomePageLayoutCSS\StyleSheet.css" />
+		<Content Remove="wwwroot\css\HomePageLayoutCSS\TopImage.module.css" />
+		<Content Remove="wwwroot\favicon.ico" />
+		<Content Remove="wwwroot\js\site.js" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Pages\Shared\" />
-    <Folder Include="wwwroot\js\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Pages\Shared\" />
+		<Folder Include="wwwroot\js\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.11" />
+		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.3.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.13" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.13">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.0" />
+	</ItemGroup>
 
 </Project>
