--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,12 @@ jobs:
           target: "/home/ubuntu/GymSystem"
 
       - name: Restart systemd service
-        uses:
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            sudo systemctl restart gymsystem
+            sudo systemctl status gymsystem --no-pager
+
