Add gthub actions workflp=ow ec2 instance-project cloud - 4

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy .NET App to EC2
 on:
   push:
     branches:
-      - Gaelle  # or replace with your branch name if different
+      - Gaelle
 
 jobs:
   build-and-deploy:
@@ -37,7 +37,7 @@ jobs:
           target: "/home/ubuntu/GymSystem"
 
       - name: Restart systemd service
-        uses: appleboy/ssh-action@0.1.6
+        uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
