--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,23 +33,23 @@ jobs:
       uses: appleboy/scp-action@v0.1.7
       with:
         host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
         source: "./publish/*"
         target: "/tmp/app_deploy"
     - name: Execute Remote Commands
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
         script: |
-          sudo systemctl stop gymsystem
+          sudo systemctl stop gym.service
           mkdir -p /home/ubuntu/GymSystem
           sudo rm -rf /home/ubuntu/GymSystem/*
           sudo cp -r /tmp/app_deploy/* /home/ubuntu/GymSystem/
           sudo chown -R ubuntu:ubuntu /home/ubuntu/GymSystem
-          sudo systemctl start gymsystem
+          sudo systemctl start gym.service
     - name: Revoke Runner IP
       if: always()
       run: |
